--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons-kit": "^1.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-tabs": "^3.1.0"
+    "react-tabs": "^3.1.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
